unpackaged/objects/CompraFicha__c.object
<CustomObject>
    <fields>
        <fullName>Cliente__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Cliente</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Jogador</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Compras Fichas</relationshipLabel>
        <relationshipName>Compras_Fichas</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fichas__c</fullName>
        <label>Fichas</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FormaPagamento__c</fullName>
        <label>Forma Pagamento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dinheiro</fullName>
                    <default>true</default>
                    <label>Dinheiro</label>
                </value>
                <value>
                    <fullName>Cartão/Débito</fullName>
                </value>
                <value>
                    <fullName>Cartão/Crédito</fullName>
                </value>
                <value>
                    <fullName>Vale/Crédito</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mesa__c</fullName>
        <label>Mesa</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Mesa__c.Status__c</field>
                <operation>equals</operation>
                <value>Aberta</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Mesa__c</referenceTo>
        <relationshipLabel>Compras Fichas</relationshipLabel>
        <relationshipName>Compras_Fichas</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SessaoCash__c</fullName>
        <label>Sessao Jogador</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SessaoCash__c.Status__c</field>
                <operation>equals</operation>
                <value>Aberta</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SessaoCash__c</referenceTo>
        <relationshipLabel>Compras Fichas</relationshipLabel>
        <relationshipName>Compras_Fichas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aberta</fullName>
                </value>
                <value>
                    <fullName>Paga</fullName>
                    <default>true</default>
                    <label>Paga</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valor_Total__c</fullName>
        <label>Valor Total</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Compra Ficha</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SessaoCash__c</columns>
        <columns>Cliente__c</columns>
        <columns>Mesa__c</columns>
        <columns>Status__c</columns>
        <columns>Fichas__c</columns>
        <columns>FormaPagamento__c</columns>
        <columns>Valor_Total__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <listViews>
        <fullName>PagasCredito_EsteMes</fullName>
        <columns>NAME</columns>
        <columns>Cliente__c</columns>
        <columns>FormaPagamento__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Mesa__c</columns>
        <columns>Fichas__c</columns>
        <columns>Valor_Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FormaPagamento__c</field>
            <operation>equals</operation>
            <value>Cartão/Crédito</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Pagas no Crédito - Este Mês</label>
    </listViews>
    <listViews>
        <fullName>PagasDebito_EsteMes</fullName>
        <columns>NAME</columns>
        <columns>Cliente__c</columns>
        <columns>FormaPagamento__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Mesa__c</columns>
        <columns>Fichas__c</columns>
        <columns>Valor_Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FormaPagamento__c</field>
            <operation>equals</operation>
            <value>Cartão/Débito</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Pagas no Débito - Este Mês</label>
    </listViews>
    <listViews>
        <fullName>PagasDinheiro_EsteMes</fullName>
        <columns>NAME</columns>
        <columns>Cliente__c</columns>
        <columns>FormaPagamento__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Mesa__c</columns>
        <columns>Fichas__c</columns>
        <columns>Valor_Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FormaPagamento__c</field>
            <operation>equals</operation>
            <value>Dinheiro</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Pagas no Dinheiro - Este Mês</label>
    </listViews>
    <listViews>
        <fullName>ValeCredito_EsteMes</fullName>
        <columns>NAME</columns>
        <columns>Cliente__c</columns>
        <columns>FormaPagamento__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Mesa__c</columns>
        <columns>Fichas__c</columns>
        <columns>Valor_Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FormaPagamento__c</field>
            <operation>equals</operation>
            <value>Vale/Crédito</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Vale Crédito - Este Mês</label>
    </listViews>
    <nameField>
        <displayFormat>CF-{00000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compras Fichas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>